example/errors/service/backend/vo.go
package backend

type (
	Todo struct {
		ID    int
		Title string
		Done  bool
	}
)
